urpc/internal/core/analysis/testdata/errors/naming/field_not_camel.ufo
// @expect: E102

type User {
	UserId: string
	Name: string
}
